syntax = "proto3";
package wiradata.users;

option go_package = "pb/users;users";
option java_package = "com.wiradata.erpapplication.users";
option java_multiple_files = true;

message AccessLevel1 {
  string id = 1;
  string name = 2;
  string route = 3;
  string description = 4;
  string created_at =  5;
  repeated AccessLevel2 children = 6;
}

message AccessLevel2 {
  string id = 1;
  string name = 2;
  string route = 3;
  string description = 4;
  string created_at =  5;
  repeated Access children = 6;
}

message Access {
  string id = 1;
  string name = 2;
  string route = 3;
  string description = 4;
  string created_at =  5;
}

message ListAccessResponse {
  repeated AccessLevel1 access = 1; 
}